2003-05-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/key-performer.cc (create_audio_elements): always use major
	key

	* Documentation/user/internals.itely: updates

	* input/regression/beam-break.ly: new file.

	* lily/beam.cc (brew_molecule): handle broken beams (i.e. print
	beams if starting or terminating stems have 'beaming set.)

	* lily/beam-engraver.cc (process_music): add forbidBeamBreak
	property.

	* lily/parser.yy (verbose_command_req): add comment about scales.

2003-05-25  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-indent.el: adjust regexps in bracket-matching.

2003-05-24  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/refman.itely: more tiny fixes

	* Documentation/user/refman.itely: bugfix: "Chord namess" ->
	"Chord names"; added table with input syntax for solesmes neumes
	table; added some words about rationale on input syntax design

	* lily/gregorian-ligature-engraver.cc,
	lily/vaticana-ligature-engraver.cc, lily/vaticana-ligature.cc,
	lily/include/gregorian-ligature.hh: bugfix: horizontal head
	alignment of Pes Initio Debilis

	* Documentation/user/refman.itely,
	lily/vaticana-ligature-engraver.cc, lily/vaticana-ligature.cc,
	mf/parmesan-heads.mf: fixed most of the head selection/alignment
	bugs in the solesmes neumes table

2003-05-24  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-indent.el: Match '(' and ')' by skipping '\(' and '\)'.
	Similarly, match '[' and ']' by skipping '\[' and '\]'.

	* lilypond-mode.el: fix tag-score. small improvements.

2003-05-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* .cvsignore: Add aclocal.m4.

	* lily/music-constructor.cc: Include <assert.h>.

2003-05-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* ly/engraver-init.ly (HaraKiriStaffContext): use
	FrenchStaffContext instead.

	* Documentation/user/refman.itely: updates

2003-05-23  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/refman.itely: added solesmes neumes table;